--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.py]
+indent_style = space
+
 [*.ts]
 quote_type = single
 
